# mgcal

./: .project  AUTHORS  Makefile.am  NEWS  README.md  configure.ac  dipole.data  dipole_irregular.data  dipole_multi_sources.data  kernel.data  prism.data
examples/: Makefile.am  example_dipole.c  example_kernel.c  example_prism.c  examples.c  examples.h
include/: Makefile.am  calc.h  cvector.h  grid.h  io.h  kernel.h  mapped.h  mgcal.h  source.h  util.h  vector.h  vector3d.h
pkgconfig/: mgcal.pc.in
src/: Makefile.am  calc.c  calc_bhattacharyya.c  cvector.c  data_array.c  grid.c  io.c  kernel.c  mapped.c  scattered.c  source.c  util.c  vector.c  vector3d.c
src/private/: util.c
