## Process this file with automake to produce Makefile.in
## Process this file with automake to produce Makefile.in

libmgcal_includedir = $(pkgincludedir)

libmgcal_include_DATA =\
	util.h\
	cvector.h\
	grid.h\
	data_array.h\
	source.h\
	calc.h\
	kernel.h\
	io.h\
	mgcal.h

EXTRA_DIST = $(libmgcal_include_DATA)

